Fixed an issue where the logo was not centering on mobile across designs. Now fixed

--- a/sources/scss/front/front.scss
+++ b/sources/scss/front/front.scss
@@ -43,7 +43,7 @@ body {
   .logo {
     background: $main-bg;
     width: 100%;
-    max-width: 60%;
+    max-width: 75%;
     display: inline-block;
     height: 4em;
     position: relative;
